# yambot

./: .gitignore  README.md  pyproject.toml
rust/: .gitignore  Cargo.toml  README.md
rust/gui/: Cargo.toml
rust/gui/src/: app.rs  lib.rs  main.rs
rust/input-tracker/: Cargo.toml
rust/input-tracker/src/: main.rs
tests/: test_to_screen.py
yambot/: __init__.py  __main__.py  capture_impl.py  keyboard.py  keyboard_impl.py  keys.py  monstep.py  mouse.py  mouse_impl.py  resources.py  screen.py  timer_cm.py
